# qobuz-music-download-script

./: .gitignore  main.py  pyproject.toml  qobuz_credentials.env  qobuz_download.ipynb
