[tool.poetry]
name = "qobuz-music-download-script"
version = "0.1.0"
description = ""
authors = ["PauloMarvin <paulo.marving@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qobuz-dl = "^0.9.9.10"
python-dotenv = "^1.0.1"
notebook = "^7.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
